--- a/render.yaml
+++ b/render.yaml
@@ -1,6 +1,6 @@
  services:
   - type: web
-    name: educational-website
+    name: tester
     env: node
     plan: free
     startCommand: npm install && node index.js
